src/nautylus.h

typedef ng_id ng_node_id;
typedef ng_id ng_relationship_id;
typedef ng_id ng_symbol_id;
typedef enum {
    NG_OK = 0,
    NG_INVALID_ARGUMENT,
    NG_NOT_FOUND,
    NG_PARSE_ERROR,
    NG_EXISTS,
    NG_OOM,
    NG_IO_ERROR,
    NG_CORRUPT,
    NG_LIMIT
} ng_status;
typedef struct ng_graph ng_graph;
ng_status ng_open(ng_graph** out, const char* path);
ng_status ng_create(ng_graph** out, const char* path);
void ng_close(ng_graph* g);
ng_status ng_save(ng_graph* g);
ng_status ng_symbol(ng_graph* g, const char* text, ng_symbol_id* out);
ng_status ng_node_create(ng_graph* g, const ng_symbol_id* labels, size_t n, ng_node_id* out);
ng_status ng_relationship_create(
    ng_graph* g, ng_node_id source, ng_symbol_id type, ng_node_id target, ng_relationship_id* out);
ng_status ng_node_set_string(ng_graph* g,
                             ng_node_id node,
                             ng_symbol_id key,
                             const char* value);
ng_status ng_node_set_int64(ng_graph* g, ng_node_id node, ng_symbol_id key, int64_t value);
ng_status ng_node_set_double(ng_graph* g, ng_node_id node, ng_symbol_id key, double value);
ng_status ng_node_set_bool(ng_graph* g, ng_node_id node, ng_symbol_id key, int value);
ng_status ng_relationship_set_string(ng_graph* g,
                                     ng_relationship_id rel,
                                     ng_symbol_id key,
                                     const char* value);
ng_status
ng_relationship_set_int64(ng_graph* g, ng_relationship_id rel, ng_symbol_id key, int64_t value);
ng_status
ng_relationship_set_double(ng_graph* g, ng_relationship_id rel, ng_symbol_id key, double value);
ng_status
ng_relationship_set_bool(ng_graph* g, ng_relationship_id rel, ng_symbol_id key, int value);
size_t ng_node_count(const ng_graph* g);
size_t ng_relationship_count(const ng_graph* g);
ng_status ng_query_print_file(const ng_graph* g, const char* query, const char* output_path);
ng_status ng_query_execute_file(ng_graph* g,
                                const char* query,
                                const char* output_path,
                                int* mutated);
const char* ng_status_name(ng_status s);